# aether

./: .gitignore  CLAUDE.MD  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.superpowers/brainstorm/12180-1778700644/content/: design-mockup.html  layout-options.html  waiting.html
.superpowers/brainstorm/12180-1778700644/state/: server-info
docs/superpowers/plans/: 2026-05-13-mvp-ui.md  2026-05-14-sponsorblock-integration.md
docs/superpowers/specs/: 2026-05-13-mvp-ui-design.md  2026-05-14-sponsorblock-integration-design.md
scripts/: run-tauri.mjs  sync-version.mjs
src/: App.test.tsx  App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  updater.rs
src/components/: ChangelogModal.tsx  DownloadButton.test.tsx  DownloadButton.tsx  FolderRow.tsx  MainScreen.test.tsx  MainScreen.tsx  PillGroup.test.tsx  PillGroup.tsx  ProgressCard.test.tsx  ProgressCard.tsx  SettingsScreen.test.tsx  SettingsScreen.tsx  TopBar.test.tsx  TopBar.tsx  UrlInput.test.tsx  UrlInput.tsx
src/hooks/: useUpdater.ts
src/lib/: pendingChangelog.ts  version.ts
src/locales/: en.ts  ru.ts
src/store/: i18n.test.ts  i18n.ts
src/stores/: engineStore.ts  navigationStore.ts  preferencesStore.ts
